--- a/html-css/module-03/hw-03/index.html
+++ b/html-css/module-03/hw-03/index.html
@@ -100,7 +100,7 @@
                 </li>
             </ul>
             <div class="button">
-                <button>Load More</button>
+                <button>Load more</button>
             </div>
         </main>
     </div>
