--- a/html-css/module-03/hw-03/index.html
+++ b/html-css/module-03/hw-03/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="wrapper">
-        <header>
+        <header class="page-header">
             <nav>
                 <ul>
                     <li>
@@ -31,13 +31,13 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class="main">
             <ul>
                 <li class="left">
                     <article>
                         <img src="img/music-festival.jpg" alt="music festival" width="420" height="280">
                         <p class="category">Lifestyle</p>
-                        <h2>More than just a music festival</h2>
+                        <h2 class="news-header">More than just a music festival</h2>
                         <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                             ut aliquip ex ea commodo consequat.
@@ -48,7 +48,7 @@
                     <article>
                         <img src="img/coffee.jpg" alt="cup of coffee" width="420" height="280">
                         <p class="category">Lifestyle</p>
-                        <h2>Life teastes better with coffee</h2>
+                        <h2 class="news-header">Life teastes better with coffee</h2>
                         <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                             ut aliquip ex ea commodo consequat. 
@@ -59,7 +59,7 @@
                     <article>
                         <img src="img/bridge.jpg" alt="two girls near the Golden Gate bridge" width="420" height="280">
                         <p class="category">Photodiary</p>
-                        <h2>American dream</h2>
+                        <h2 class="news-header">American dream</h2>
                         <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                             ut aliquip ex ea commodo consequat.
@@ -70,7 +70,7 @@
                     <article>
                         <img src="img/alps.jpg" alt="a boy is looking at mountains" width="420" height="280">
                         <p class="category">Photodiary</p>
-                        <h2>A day exploring the Alps</h2>
+                        <h2 class="news-header">A day exploring the Alps</h2>
                         <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                             ut aliquip ex ea commodo consequat. 
@@ -81,7 +81,7 @@
                     <article>
                         <img src="img/hat.jpg" alt="a girl in the hat on the road" width="420" height="280">
                         <p class="category">Lifestyle</p>
-                        <h2>Top 10 songs for running</h2>
+                        <h2 class="news-header">Top 10 songs for running</h2>
                         <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                             ut aliquip ex ea commodo consequat. 
@@ -92,7 +92,7 @@
                     <article>
                         <img src="img/road.jpg" alt="a winter road" width="420" height="280">
                         <p class="category">Lifestyle</p>
-                        <h2>Cold winter days</h2>
+                        <h2 class="news-header">Cold winter days</h2>
                         <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
                             ut aliquip ex ea commodo consequat. 
@@ -100,9 +100,9 @@
                     </article>
                 </li>
             </ul>
-            <div class="button">
-                <button>Load more</button>
-            </div>
+        
+                <button class="button-load-more">Load more</button>
+           
         </main>
     </div>
 </body>
