--- a/html-css/module-03/hw-03/index.html
+++ b/html-css/module-03/hw-03/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <header class="page-header">
             <nav>
-                <ul>
+                <ul class="site-navigation">
                     <li>
                         <a href="#lifestyle" target="_self">lifestyle</a>
                     </li>
