--- a/html-css/module-03/hw-03/index.html
+++ b/html-css/module-03/hw-03/index.html
@@ -32,77 +32,79 @@
             </nav>
         </header>
         <main>
-            <ul class="main-content">
-                <li>
-                    <article>
-                        <img class="article-img" src="img/music-festival.jpg" alt="music festival" width="420" height="280">
-                        <p class="category">Lifestyle</p>
-                        <h2 class="news-header">More than just a music festival</h2>
-                        <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
-                        </p>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <img class="article-img" src="img/coffee.jpg" alt="cup of coffee" width="420" height="280">
-                        <p class="category">Lifestyle</p>
-                        <h2 class="news-header">Life teastes better with coffee</h2>
-                        <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
-                        </p>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <img class="article-img" src="img/bridge.jpg" alt="two girls near the Golden Gate bridge" width="420" height="280">
-                        <p class="category">Photodiary</p>
-                        <h2 class="news-header">American dream</h2>
-                        <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
-                        </p>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <img class="article-img" src="img/alps.jpg" alt="a boy is looking at mountains" width="420" height="280">
-                        <p class="category">Photodiary</p>
-                        <h2 class="news-header">A day exploring the Alps</h2>
-                        <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
-                        </p>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <img class="article-img" src="img/hat.jpg" alt="a girl in the hat on the road" width="420" height="280">
-                        <p class="category">Lifestyle</p>
-                        <h2 class="news-header">Top 10 songs for running</h2>
-                        <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
-                        </p>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <img class="article-img" src="img/road.jpg" alt="a winter road" width="420" height="280">
-                        <p class="category">Lifestyle</p>
-                        <h2 class="news-header">Cold winter days</h2>
-                        <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                            ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
-                        </p>
-                    </article>
-                </li>
-            </ul>
+            <section>
+                <h2 class="visually-hidden">Меня не видно</h2>
+                <ul class="main-content">
+                    <li>
+                        <article>
+                            <img class="article-img" src="img/music-festival.jpg" alt="music festival" width="420" height="280">
+                            <p class="category">Lifestyle</p>
+                            <h2 class="news-header">More than just a music festival</h2>
+                            <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
+                            </p>
+                        </article>
+                    </li>
+                    <li>
+                        <article>
+                            <img class="article-img" src="img/coffee.jpg" alt="cup of coffee" width="420" height="280">
+                            <p class="category">Lifestyle</p>
+                            <h2 class="news-header">Life teastes better with coffee</h2>
+                            <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
+                            </p>
+                        </article>
+                    </li>
+                    <li>
+                        <article>
+                            <img class="article-img" src="img/bridge.jpg" alt="two girls near the Golden Gate bridge" width="420" height="280">
+                            <p class="category">Photodiary</p>
+                            <h2 class="news-header">American dream</h2>
+                            <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
+                            </p>
+                        </article>
+                    </li>
+                    <li>
+                        <article>
+                            <img class="article-img" src="img/alps.jpg" alt="a boy is looking at mountains" width="420" height="280">
+                            <p class="category">Photodiary</p>
+                            <h2 class="news-header">A day exploring the Alps</h2>
+                            <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
+                            </p>
+                        </article>
+                    </li>
+                    <li>
+                        <article>
+                            <img class="article-img" src="img/hat.jpg" alt="a girl in the hat on the road" width="420" height="280">
+                            <p class="category">Lifestyle</p>
+                            <h2 class="news-header">Top 10 songs for running</h2>
+                            <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
+                            </p>
+                        </article>
+                    </li>
+                    <li>
+                        <article>
+                            <img class="article-img" src="img/road.jpg" alt="a winter road" width="420" height="280">
+                            <p class="category">Lifestyle</p>
+                            <h2 class="news-header">Cold winter days</h2>
+                            <p class="news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit
+                            </p>
+                        </article>
+                    </li>
+                </ul>
 
-            <button class="button-load-more">Load more</button>
-
+                <a href="#" class="button-load-more" target="_self">Load more</a>
+            </section>
         </main>
     </div>
 </body>
