--- a/html-css/module-03/hw-03/index.html
+++ b/html-css/module-03/hw-03/index.html
@@ -103,7 +103,8 @@
                     </li>
                 </ul>
 
-                <a href="#" class="button-load-more" target="_self">Load more</a>
+                <button class="button-load-more">Load more</button>
+                
             </section>
         </main>
     </div>
