--- a/html-css/module-04/hw-04/index.html
+++ b/html-css/module-04/hw-04/index.html
@@ -39,8 +39,9 @@
             </nav>
         </header>
         <main class="main-content">
+            <h1 class="visually-hidden">MART COMPANY</h1>
             <section class="featured-products">
-                <h2 class="section-header products">Featured products</h2>
+                <h2 class="section-header">Featured products</h2>
                 <ul class="list-of-products clearfix">
                     <li class="item">
                         <img src="img/blue-shoe.jpg" alt="blue women's shoe" width="255" height="322">
