--- a/html-css/module-05/hw-05/index.html
+++ b/html-css/module-05/hw-05/index.html
@@ -106,7 +106,7 @@
                             <li class="icon"><a href="#"><span class="pe-7s-cart"></span><span class="add-to-chart">add to chart</span></a></li>
                         </ul>
                     </div>
-                        <img src="/img/yellow-tshirt.jpg" wid="255" height="322" alt="man in yellow t-shirt">
+                        <img src="/img/yellow-tshirt.jpg" width="255" height="322" alt="man in yellow t-shirt">
                         <div class="item-description clearfix">
                             <p class="item-name">yellow tshirt</p>
                             <p class="item-price">$21</p>
@@ -121,7 +121,7 @@
                             <li class="icon"><a href="#"><span class="pe-7s-cart"></span><span class="add-to-chart">add to chart</span></a></li>
                         </ul>
                     </div>
-                        <img src="/img/cool-lingerie.jpg" wid="255" height="322" alt="lingerie">
+                        <img src="/img/cool-lingerie.jpg" width="255" height="322" alt="lingerie">
                         <div class="item-description clearfix">
                             <p class="item-name">cool lingerie</p>
                             <p class="item-price">$56</p>
@@ -133,7 +133,7 @@
            </main>
 
            <footer class="footer">
-            <p class="copyright">All Rights Reserved &copy Dokan | Designed <span class="color-text ">ThemenGraph</span>
+            <p class="copyright">All Rights Reserved &#169 Dokan | Designed <span class="color-text ">ThemenGraph</span>
             </p>
         </footer>
         
