--- a/html-css/module-05/hw-05/index.html
+++ b/html-css/module-05/hw-05/index.html
@@ -133,7 +133,7 @@
            </main>
 
            <footer class="footer">
-            <p class="copyright">All Rights Reserved &#169 Dokan | Designed <span class="color-text ">ThemenGraph</span>
+            <p class="copyright">All Rights Reserved &#169; Dokan | Designed <span class="color-text ">ThemenGraph</span>
             </p>
         </footer>
         
