--- a/html-css/module-05/hw-05/index.html
+++ b/html-css/module-05/hw-05/index.html
@@ -76,7 +76,7 @@
                             <li class="icon"><a href="#"><span class="pe-7s-cart"></span><span class="add-to-chart">add to chart</span></a></li>
                         </ul>
                     </div>
-                        <img src="/img/blue-tshirt.jpg" width="255" height="322" alt="man in blue t-shirt">
+                        <img src="img/blue-tshirt.jpg" width="255" height="322" alt="man in blue t-shirt">
                         <div class="item-description clearfix">
                             <p class="item-name">blue tshirt</p>
                             <p class="item-price">$26</p>
@@ -91,7 +91,7 @@
                             <li class="icon"><a href="#"><span class="pe-7s-cart"></span><span class="add-to-chart">add to chart</span></a></li>
                         </ul>
                     </div>
-                        <img src="/img/women-shirt.jpg" width="255" height="322" alt="women in shirt">
+                        <img src="img/women-shirt.jpg" width="255" height="322" alt="women in shirt">
                         <div class="item-description clearfix">
                             <p class="item-name">woman shirt</p>
                             <p class="item-price">$31</p>
@@ -106,7 +106,7 @@
                             <li class="icon"><a href="#"><span class="pe-7s-cart"></span><span class="add-to-chart">add to chart</span></a></li>
                         </ul>
                     </div>
-                        <img src="/img/yellow-tshirt.jpg" width="255" height="322" alt="man in yellow t-shirt">
+                        <img src="img/yellow-tshirt.jpg" width="255" height="322" alt="man in yellow t-shirt">
                         <div class="item-description clearfix">
                             <p class="item-name">yellow tshirt</p>
                             <p class="item-price">$21</p>
@@ -121,7 +121,7 @@
                             <li class="icon"><a href="#"><span class="pe-7s-cart"></span><span class="add-to-chart">add to chart</span></a></li>
                         </ul>
                     </div>
-                        <img src="/img/cool-lingerie.jpg" width="255" height="322" alt="lingerie">
+                        <img src="img/cool-lingerie.jpg" width="255" height="322" alt="lingerie">
                         <div class="item-description clearfix">
                             <p class="item-name">cool lingerie</p>
                             <p class="item-price">$56</p>
