--- a/html-css/module-05/hw-05/index.html
+++ b/html-css/module-05/hw-05/index.html
@@ -7,208 +7,169 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
-    <link rel="stylesheet" href="css/pe-icon-7-stroke/css/helper.css">
     <link rel="stylesheet" href="css/style.css">
     <title>MART</title>
 </head>
 
 <body>
-    <div class="wrapper">
+    <header class="page-header container">
+        <nav class="nav clearfix">
+            <a href="# " class="logo">Mart</a>
+            <ul class="site-navigation-list">
+                <li>
+                    <a href="#" target="_self">home</a>
+                </li>
+                <li>
+                    <a href="#" target="_self">about us</a>
+                </li>
+                <li>
+                    <a href="#" target="_self">page</a>
+                </li>
+                <li>
+                    <a href="#" target="_self">shop</a>
+                </li>
+                <li>
+                    <a href="#" target="_self">blog</a>
+                </li>
+                <li>
+                    <a href="#" target="_self">contact us</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-        <header class="page-header container">
-            <nav class="nav clearfix">
-                <a href="# " class="logo">Mart</a>
-                <ul class="site-navigation-list">
-                    <li>
-                        <a href="#" target="_self">home</a>
-                    </li>
-                    <li>
-                        <a href="#" target="_self">about us</a>
-                    </li>
-                    <li>
-                        <a href="#" target="_self">page</a>
-                    </li>
-                    <li>
-                        <a href="#" target="_self">shop</a>
-                    </li>
-                    <li>
-                        <a href="#" target="_self">blog</a>
-                    </li>
-                    <li>
-                        <a href="#" target="_self">contact us</a>
+    <main class="main-content">
+        <h1 class="visually-hidden ">MART COMPANY</h1>
+
+        <div class="slider">
+            <div class="slider-title container">
+                <button class="slider-ctrl slider-ctrl-prev "></button>
+                <button class="slider-ctrl slider-ctrl-next "></button>
+                <ul class="slides-list ">
+                    <li class="slides-item ">
+                        <p class="slides-name ">Affordable Paris tours</p>
+                        <p class="slides-descr ">City tours / Tour tickets / Tour guides</p>
                     </li>
                 </ul>
-            </nav>
-        </header>
-
-        <main class="main-content">
-            <h1 class="visually-hidden ">MART COMPANY</h1>
-
-            <div class="slider">
-                <div class="slider-overlay">
-                    <div class="slider-title container">
-                        <button class="slider-ctrl slider-ctrl-prev ">
-                            <span class="pe-7s-angle-left "></span>
-                        </button>
-                        <button class="slider-ctrl slider-ctrl-next ">
-                            <span class="pe-7s-angle-right "></span>
-                        </button>
-                        <ul class="slides-list ">
-                            <li class="slides-item ">
-                                <p class="slides-name ">Affordable Paris tours</p>
-                                <p class="slides-descr ">City tours / Tour tickets / Tour guides</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
             </div>
+        </div>
 
-            <section class="new-collection">
-                <div class="container">
-                    <h2 class="section-header">new collection</h2>
-                    <ul class="list-of-products clearfix">
-                        <li class="item">
-                            <div class="item-overlay">
-                                <ul class="icons-list clearfix">
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-like"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-shuffle"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-clock"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-cart"></span>
-                                            <span class="add-to-chart">add to chart</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <img src="img/blue-tshirt.jpg" width="255" height="322" alt="man in blue t-shirt">
-                            <div class="item-description clearfix">
-                                <p class="item-name">blue tshirt</p>
-                                <p class="item-price">$26</p>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="item-overlay">
-                                <ul class="icons-list clearfix">
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-like"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-shuffle"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-clock"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-cart"></span>
-                                            <span class="add-to-chart">add to chart</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <img src="img/women-shirt.jpg" width="255" height="322" alt="women in shirt">
-                            <div class="item-description clearfix">
-                                <p class="item-name">woman shirt</p>
-                                <p class="item-price">$31</p>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="item-overlay">
-                                <ul class="icons-list clearfix">
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-like"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-shuffle"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-clock"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-cart"></span>
-                                            <span class="add-to-chart">add to chart</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <img src="img/yellow-tshirt.jpg" width="255" height="322" alt="man in yellow t-shirt">
-                            <div class="item-description clearfix">
-                                <p class="item-name">yellow tshirt</p>
-                                <p class="item-price">$21</p>
-                            </div>
-                        </li>
-                        <li class="item">
-                            <div class="item-overlay">
-                                <ul class="icons-list clearfix">
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-like"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-shuffle"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-clock"></span>
-                                        </a>
-                                    </li>
-                                    <li class="icon">
-                                        <a href="#">
-                                            <span class="pe-7s-cart"></span>
-                                            <span class="add-to-chart">add to chart</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <img src="img/cool-lingerie.jpg" width="255" height="322" alt="lingerie">
-                            <div class="item-description clearfix">
-                                <p class="item-name">cool lingerie</p>
-                                <p class="item-price">$56</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </section>
-            
-        </main>
+        <section class="new-collection">
+            <div class="container">
+                <h2 class="section-header">new collection</h2>
+                <ul class="list-of-products clearfix">
+                    <li class="item">
+                        <div class="item-overlay">
+                            <ul class="icons-list clearfix">
+                                <li class="icon">
+                                    <a href="#" class="like"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="share"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="time"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="cart">
+                                        <span class="add-to-chart">add to chart</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="img/blue-tshirt.jpg" width="255" height="322" alt="man in blue t-shirt">
+                        <div class="item-description clearfix">
+                            <p class="item-name">blue tshirt</p>
+                            <p class="item-price">26</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item-overlay">
+                            <ul class="icons-list clearfix">
+                                <li class="icon">
+                                    <a href="#" class="like"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="share"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="time"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="cart">
+                                        <span class="add-to-chart">add to chart</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="img/women-shirt.jpg" width="255" height="322" alt="women in shirt">
+                        <div class="item-description clearfix">
+                            <p class="item-name">woman shirt</p>
+                            <p class="item-price">31</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item-overlay">
+                            <ul class="icons-list clearfix">
+                                <li class="icon">
+                                    <a href="#" class="like"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="share"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="time"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="cart">
+                                        <span class="add-to-chart">add to chart</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="img/yellow-tshirt.jpg" width="255" height="322" alt="man in yellow t-shirt">
+                        <div class="item-description clearfix">
+                            <p class="item-name">yellow tshirt</p>
+                            <p class="item-price">21</p>
+                        </div>
+                    </li>
+                    <li class="item">
+                        <div class="item-overlay">
+                            <ul class="icons-list clearfix">
+                                <li class="icon">
+                                    <a href="#" class="like"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="share"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="time"></a>
+                                </li>
+                                <li class="icon">
+                                    <a href="#" class="cart">
+                                        <span class="add-to-chart">add to chart</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <img src="img/cool-lingerie.jpg" width="255" height="322" alt="lingerie">
+                        <div class="item-description clearfix">
+                            <p class="item-name">cool lingerie</p>
+                            <p class="item-price">56</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
 
-        <footer class="footer">
-            <p class="copyright">All Rights Reserved &#169; Dokan | Designed
-                <span class="color-text ">ThemenGraph</span>
-            </p>
-        </footer>
+    </main>
 
-    </div>
+    <footer class="footer">
+        <p class="copyright">All Rights Reserved &#169; Dokan | Designed
+            <span class="color-text ">ThemenGraph</span>
+        </p>
+    </footer>
+
 </body>
 
 </html>
