icons-span-visually-hidden

--- a/html-css/module-05/hw-05/index.html
+++ b/html-css/module-05/hw-05/index.html
@@ -62,16 +62,23 @@
                         <div class="item-overlay">
                             <ul class="icons-list clearfix">
                                 <li class="icon">
-                                    <a href="#" class="like"></a>
+                                    <a href="#" class="like">
+                                       <span class="visually-hidden">Like</span>  
+                                    </a>
                                 </li>
                                 <li class="icon">
-                                    <a href="#" class="share"></a>
+                                    <a href="#" class="share">
+                                        <span class="visually-hidden">Share</span>
+                                    </a>
                                 </li>
                                 <li class="icon">
-                                    <a href="#" class="time"></a>
+                                    <a href="#" class="time">
+                                        <span class="visually-hidden">Time</span>
+                                    </a>
                                 </li>
                                 <li class="icon">
                                     <a href="#" class="cart">
+                                        <span class="visually-hidden">Cart</span>
                                         <span class="add-to-chart">add to chart</span>
                                     </a>
                                 </li>
@@ -87,16 +94,23 @@
                         <div class="item-overlay">
                             <ul class="icons-list clearfix">
                                 <li class="icon">
-                                    <a href="#" class="like"></a>
+                                    <a href="#" class="like">
+                                        <span class="visually-hidden">Like</span>
+                                    </a>
                                 </li>
                                 <li class="icon">
-                                    <a href="#" class="share"></a>
+                                    <a href="#" class="share">
+                                    <span class="visually-hidden">Share</span>
+                                    </a>
                                 </li>
                                 <li class="icon">
-                                    <a href="#" class="time"></a>
+                                    <a href="#" class="time">
+                                        <span class="visually-hidden">Time</span>
+                                    </a>
                                 </li>
                                 <li class="icon">
                                     <a href="#" class="cart">
+                                        <span class="visually-hidden">Cart</span>
                                         <span class="add-to-chart">add to chart</span>
                                     </a>
                                 </li>
@@ -112,16 +126,23 @@
                         <div class="item-overlay">
                             <ul class="icons-list clearfix">
                                 <li class="icon">
-                                    <a href="#" class="like"></a>
+                                    <a href="#" class="like">
+                                        <span class="visually-hidden">Like</span>
+                                    </a>
                                 </li>
                                 <li class="icon">
-                                    <a href="#" class="share"></a>
+                                    <a href="#" class="share">
+                                        <span class="visually-hidden">Share</span>
+                                    </a>
                                 </li>
                                 <li class="icon">
-                                    <a href="#" class="time"></a>
+                                    <a href="#" class="time">
+                                        <span class="visually-hidden">Time</span>
+                                    </a>
                                 </li>
                                 <li class="icon">
                                     <a href="#" class="cart">
+                                        <span class="visually-hidden">Cart</span>
                                         <span class="add-to-chart">add to chart</span>
                                     </a>
                                 </li>
@@ -137,16 +158,23 @@
                         <div class="item-overlay">
                             <ul class="icons-list clearfix">
                                 <li class="icon">
-                                    <a href="#" class="like"></a>
+                                    <a href="#" class="like">
+                                        <span class="visually-hidden">Like</span>
+                                    </a>
                                 </li>
                                 <li class="icon">
-                                    <a href="#" class="share"></a>
+                                    <a href="#" class="share">
+                                        <span class="visually-hidden">Share</span>
+                                    </a>
                                 </li>
                                 <li class="icon">
-                                    <a href="#" class="time"></a>
+                                    <a href="#" class="time">
+                                        <span class="visually-hidden">Time</span>
+                                    </a>
                                 </li>
                                 <li class="icon">
                                     <a href="#" class="cart">
+                                        <span class="visually-hidden">Cart</span>
                                         <span class="add-to-chart">add to chart</span>
                                     </a>
                                 </li>
