--- a/html-css/module-06/hw-06/index.html
+++ b/html-css/module-06/hw-06/index.html
@@ -100,7 +100,7 @@
             <ul class="team-list">
                 <li class="team-member">
                     <div class="team-image">
-                        <img src="/img/matthew-dix.png" alt="graphic designer" width="380" height="470">
+                        <img src="img/matthew-dix.png" alt="graphic designer" width="380" height="470">
                         <div class="overlay">
                             <ul class="list-of-icons">
                                 <li class="icon">
@@ -132,7 +132,7 @@
                 <li class="team-member">
 
                     <div class="team-image">
-                        <img src="/img/christopher-campbell.png" alt="UX designer" width="380" height="470">
+                        <img src="img/christopher-campbell.png" alt="UX designer" width="380" height="470">
                         <div class="overlay">
                             <ul class="list-of-icons">
                                 <li class="icon">
@@ -164,7 +164,7 @@
 
                 <li class="team-member">
                     <div class="team-image">
-                        <img src="/img/michael-fertig.png" alt="developer" width="380" height="470">
+                        <img src="img/michael-fertig.png" alt="developer" width="380" height="470">
                         <div class="overlay">
                             <ul class="list-of-icons">
                                 <li class="icon">
